Добавил заголовок форме

--- a/src/components/article-params-form/ArticleParamsForm.module.scss
+++ b/src/components/article-params-form/ArticleParamsForm.module.scss
@@ -31,3 +31,11 @@
 	justify-content: space-between;
 	margin-top: auto;
 }
+
+.form_title {
+	font-weight: 800;
+	font-size: 31px;
+	font-family: "open-sans", sans-serif;
+	text-align: left;
+	text-transform: uppercase;
+}
