--- a/src/components/article-params-form/ArticleParamsForm.module.scss
+++ b/src/components/article-params-form/ArticleParamsForm.module.scss
@@ -35,7 +35,7 @@
 .form_title {
 	font-weight: 800;
 	font-size: 31px;
-	font-family: "open-sans", sans-serif;
+	font-family: 'open-sans', sans-serif;
 	text-align: left;
 	text-transform: uppercase;
 }
