--- a/src/components/article-params-form/ArticleParamsForm.module.scss
+++ b/src/components/article-params-form/ArticleParamsForm.module.scss
@@ -3,7 +3,7 @@
 	left: 0;
 	width: 616px;
 	height: 100%;
-	overflow: hidden auto;
+	overflow: auto;
 	background-color: #ffffff;
 	border-right: 1px solid #000000;
 	transform: translate(-616px);
@@ -20,7 +20,7 @@
 	flex-direction: column;
 	gap: 50px;
 	box-sizing: border-box;
-	width: 616px;
+	width: 100%;
 	height: auto;
 	min-height: 100%;
 	padding: 50px 31px;
